src/App.css
body {
  background-color: #282726;
  font-family: "Hanken Grotesk", Arial, sans-serif;
  text-align: center;
}
main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #f9f4da;
  margin: 40px 100px 0 100px;
}
header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
h2 {
  font-size: 1.25rem;
  font-weight: 500;
  margin:0;
}
p {
  margin: 0;
}
header p {
  font-size: 0.875rem;
  color: #8e8e8e;
  max-width: 352px;
  margin: 10px 0 0 0;
}

.status {
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-width: 22rem;
  min-height: 3.7rem;
  margin: 20px;
  border-radius: 0.5rem;
}
.status.farewell{
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #7A5EA7;
  border-radius: 0;
  border-style: dashed;
  border-color: #323232;
  font-style: italic;
}
.status.won{
  background-color: #10a95b;
}
.status.lost{
  background-color: #BA2A2A;
}
.status p {
  font-size: 1rem;
}

.languages {
  display: flex;
  flex-wrap: wrap;
  max-width: 20rem;
  justify-content: center;
  gap: 0.3rem;
  margin: 10px;
}
.language {
  border-radius: 0.15rem;
  font-size: 0.75rem;
  font-weight: 700;
  padding: 0.3rem;
}
.language.lost {
  position: relative;
}
.language.lost::after {
  content: "💀";
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
  font-size: 0.85rem;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.7);
  border-radius: 0.15rem;
}

.word {
  margin: 1.5rem;
}
.word span {
  font-size: 1rem;
  margin: 0.0875rem;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  background-color: #323232;
  border-bottom-style: solid;
  border-bottom-color: #f9f4da;
  min-width: 2.5rem;
  min-height: 2.5rem;
}
.letter.isMissing{
  color: #ec5d49;
}

.keyboard {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  max-width: 30rem;
  gap: 0.4rem;
}


.key {
  background-color: #fcba29;
  color: #1e1e1e;
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 0.25rem;
  border-style: solid;
  border-color: #d7d7d7;
  border-width: 1px;
  font-weight: 600;
  font-size: 1rem;
  cursor: pointer;
  font-family: inherit;
}
.key:disabled{
  cursor: not-allowed;
  opacity:0.5;
}

.key.clicked.correct {
  background-color: #10a95b;
}
.key.clicked.wrong {
  background-color: #ec5d49;
}

.newgamebtn{
  margin: 2rem;
  padding: 0.375rem 0.75rem 0.375rem 0.75rem;
  border: none;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 1rem;
  font-family: inherit;
  min-width: 12.75rem;
  min-height: 1.313rem;
  background-color: #11B5E5;

}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}

